--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,28 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Description of your website" />
-    <meta name="keywords" content="keywords, for, your, website" />
-    <meta name="author" content="Your Name" />
+
+    <title>Awareness Indeed - โปรเจกต์นิทรรศการสำรวจตัวตนผ่านเรื่องราว</title>
+    <meta
+      name="description"
+      content="Awareness Indeed คือโปรเจกต์ Interactive Story ที่จะพาคุณไปสำรวจความรู้สึกและคุณค่าในตัวเองผ่านการเดินทางในจักรวาลที่ไม่คุ้นเคย เพื่อค้นพบและโอบกอดตัวตนที่แท้จริงของคุณ"
+    />
+    <meta name="keywords" content="Awareness Indeed, self-awareness, self-love, interactive story, project, แบบทดสอบ, รักตัวเอง, สำรวจตัวเอง, คุณค่าในตัวเอง" />
+    <meta name="author" content="Natchanon Chanamo" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Awareness Indeed</title>
     <meta name="google-site-verification" content="google23df15a31227f70f" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://NatchanonChanamo.github.io/Awareness-Indeed-1/" />
+    <meta property="og:title" content="Awareness Indeed - โปรเจกต์นิทรรศการสำรวจตัวตนผ่านเรื่องราว" />
+    <meta property="og:description" content="โปรเจกต์ Interactive Story ที่จะพาคุณไปสำรวจคุณค่าในตัวเอง" />
+    <meta property="og:image" content="https://NatchanonChanamo.github.io/Awareness-Indeed-1/logo512.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://NatchanonChanamo.github.io/Awareness-Indeed-1/" />
+    <meta property="twitter:title" content="Awareness Indeed - โปรเจกต์นิทรรศการสำรวจตัวตนผ่านเรื่องราว" />
+    <meta property="twitter:description" content="โปรเจกต์ Interactive Story ที่จะพาคุณไปสำรวจคุณค่าในตัวเอง" />
+    <meta property="twitter:image" content="https://NatchanonChanamo.github.io/Awareness-Indeed-1/logo512.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
