--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <title>Awareness Indeed - โปรเจกต์นิทรรศการสำรวจตัวตนผ่านเรื่องราว</title>
+    <title>Awareness Indeed - นิทรรศการตระหนักรู้ในการรักตัวเอง</title>
     <meta
       name="description"
       content="Awareness Indeed คือโปรเจกต์ Interactive Story ที่จะพาคุณไปสำรวจความรู้สึกและคุณค่าในตัวเองผ่านการเดินทางในจักรวาลที่ไม่คุ้นเคย เพื่อค้นพบและโอบกอดตัวตนที่แท้จริงของคุณ"
@@ -18,13 +18,13 @@
     <meta name="google-site-verification" content="google23df15a31227f70f" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://NatchanonChanamo.github.io/Awareness-Indeed-1/" />
-    <meta property="og:title" content="Awareness Indeed - โปรเจกต์นิทรรศการสำรวจตัวตนผ่านเรื่องราว" />
+    <meta property="og:title" content="Awareness Indeed - นิทรรศการตระหนักรู้ในการรักตัวเอง" />
     <meta property="og:description" content="โปรเจกต์ Interactive Story ที่จะพาคุณไปสำรวจคุณค่าในตัวเอง" />
     <meta property="og:image" content="https://NatchanonChanamo.github.io/Awareness-Indeed-1/logo512.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://NatchanonChanamo.github.io/Awareness-Indeed-1/" />
-    <meta property="twitter:title" content="Awareness Indeed - โปรเจกต์นิทรรศการสำรวจตัวตนผ่านเรื่องราว" />
+    <meta property="twitter:title" content="Awareness Indeed - นิทรรศการตระหนักรู้ในการรักตัวเอง" />
     <meta property="twitter:description" content="โปรเจกต์ Interactive Story ที่จะพาคุณไปสำรวจคุณค่าในตัวเอง" />
     <meta property="twitter:image" content="https://NatchanonChanamo.github.io/Awareness-Indeed-1/logo512.png" />
   </head>
